fix misaligned sheds list and palnts list - 2

--- a/public/index.css
+++ b/public/index.css
@@ -214,10 +214,16 @@ section {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 
+@media (min-width: 576px) {
+  .container {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+}
 .path {
   margin: 20px 0;
 }
@@ -343,12 +349,12 @@ aside {
 }
 
 /* -------Garden Sheds------- */
-.garden-sheds-container {
+.thumbnails-container {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0;
+  margin-top: 40px;
   flex-wrap: wrap;
 }
 
@@ -357,7 +363,7 @@ aside {
   min-width: 240px;
   max-width: 240px;
   box-shadow: 2px 2px 5px grey;
-  margin: 20px 10px 0;
+  margin: 10px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -366,7 +372,7 @@ aside {
 }
 
 .garden-shed-image-wrapper {
-  width: 250px;
+  width: 100%;
   text-align: center;
   display: grid;
   grid-template-columns: 0 56px auto 55px;
@@ -421,18 +427,18 @@ aside {
 }
 
 /* -------Plant Thumbnails------- */
-.plant-thumbnails-container {
-  width: 100%;
+.plant-thumbnail-wrapper {
+  width: 170px;
+  min-width: 170px;
+  max-width: 170px;
+  box-shadow: 2px 2px 5px grey;
+  margin: 10px;
+  padding: 10px;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-}
-
-.plant-thumbnail-wrapper {
-  text-align: center;
-  box-shadow: 2px 2px 5px grey;
-  padding: 20px 0;
-  margin: 20px 10px 0;
 }
 
 .plant-thumbnail-follow {
@@ -450,8 +456,7 @@ aside {
 }
 
 .plant-thumbnail {
-  width: 190px;
-  max-width: 190px;
+  width: 100%;
   height: 120px;
   max-height: 120px;
   min-height: 120px;
@@ -461,7 +466,8 @@ aside {
 .plant-thumbnail-name {
   text-decoration: none;
   color: darkgreen;
-  margin: 10px 18px;
+  margin-top: 10px;
+  height: 40px;
 }
 
 .sgs-item {
@@ -470,9 +476,12 @@ aside {
 
 /* Break point for very small devices */
 @media (min-width: 576px) {
+  .plant-thumbnail-wrapper {
+    margin: 15px;
+  }
+
   .plant-thumbnail {
-    width: 220px;
-    max-width: 220px;
+    width: 100%;
     height: 150px;
     min-height: 150px;
     max-height: 150px;
